gcc/testsuite/rust/rustc/ui/unsafe/unsafe-around-compiler-generated-unsafe.rs
// issue #12418

#![deny(unused_unsafe)]

fn main() {
    unsafe { println!("foo"); } // { dg-error "" "" { target *-*-* } }
}

